[gd_scene load_steps=13 format=3 uid="uid://neqca37jkuax"]

[ext_resource type="Script" path="res://scenes/game_object/basic_fish/basic_fish.gd" id="1_2bwqr"]
[ext_resource type="PackedScene" uid="uid://gahjnxgdmtkk" path="res://scenes/component/hunger_component/hunger_component.tscn" id="2_1x07r"]
[ext_resource type="PackedScene" uid="uid://bea44qy1ikpqi" path="res://scenes/component/velocity_component/velocity_component.tscn" id="2_onust"]
[ext_resource type="PackedScene" uid="uid://bh00qe8556ulm" path="res://scenes/component/money_drop_component/money_drop_component.tscn" id="3_nwp8p"]
[ext_resource type="Texture2D" uid="uid://bgx1vikhuglhq" path="res://assets/images/placeholder_fish-removebg-preview.png" id="4_55q3b"]
[ext_resource type="PackedScene" uid="uid://ch2barirtvvpc" path="res://scenes/component/mouth_area_2d/mouth_area_2d.tscn" id="5_4lr6d"]
[ext_resource type="PackedScene" uid="uid://dfnbpyp16wbc3" path="res://scenes/util/debug_label.tscn" id="5_atin8"]
[ext_resource type="AudioStream" uid="uid://f5h6ww5jguh0" path="res://assets/sfx/Short - Ploppy Plop.wav" id="7_c3aih"]

[sub_resource type="Animation" id="Animation_7j075"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Sprite2D:skew")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_qh4ly"]
resource_name = "dying"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1.68179, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -812)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Sprite2D:modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(0.176777, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(0, 0.109804, 0, 1)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Visuals/Sprite2D:skew")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.174533, -0.174533, 0.174533, 0.0]
}

[sub_resource type="Animation" id="Animation_traws"]
resource_name = "swimming"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Sprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 2), Vector2(0, -2), Vector2(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Sprite2D:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, -0.261799, 0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_batr3"]
_data = {
"RESET": SubResource("Animation_7j075"),
"dying": SubResource("Animation_qh4ly"),
"swimming": SubResource("Animation_traws")
}

[node name="Basic Fish" type="CharacterBody2D" groups=["basic_fish"]]
editor_description = "alala"
script = ExtResource("1_2bwqr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "swimming"
libraries = {
"": SubResource("AnimationLibrary_batr3")
}

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="VelocityComponent" parent="." instance=ExtResource("2_onust")]
max_speed = 80
acceleration = 10.0

[node name="HungerComponent" parent="." node_paths=PackedStringArray("mouth_area_2d") instance=ExtResource("2_1x07r")]
mouth_area_2d = NodePath("../Visuals/Sprite2D/MouthArea2D")
hunger_timer_time = 5

[node name="MoneyDropComponent" parent="." instance=ExtResource("3_nwp8p")]
timer_value = 5

[node name="Visuals" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Visuals"]
scale = Vector2(0.25, 0.25)
texture = ExtResource("4_55q3b")

[node name="MouthArea2D" parent="Visuals/Sprite2D" instance=ExtResource("5_4lr6d")]
unique_name_in_owner = true
position = Vector2(92, -4)
scale = Vector2(10.4664, 8.79888)

[node name="DebugLabel" parent="." instance=ExtResource("5_atin8")]
visible = false

[node name="PelletEatenSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_c3aih")
volume_db = -12.0
